--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -22,7 +22,8 @@
     <link href="{{url_for('static',filename='css/print.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='icons_master/font/css/open-iconic-bootstrap.css')}}" rel="stylesheet">
     <link rel="stylesheet" media="print" href="{{url_for('static', filename='css/print-format.css')}}">
-    
+    <link href="{{url_for('static', filename='css/animation.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/icon-set.css')}}" rel="stylesheet">
    
    {% block stylesheets %} 
    
@@ -74,13 +75,18 @@
             background-color:#1b1b19 ;
             
         }
-        #sidenav-styles ul >li>a>span {
+        #sidenav-styles ul > li > a > span {
             color: wheat;
+           
         }
         
        .sidebar-heading span  {
             color: whitesmoke;
+           
         }
+       
+           
+        
 
     </style>
 
@@ -119,35 +125,38 @@
     </nav>
     
     <nav style="margin-top: 59px; " id="sidenav-main" class="collapse d-none d-md-block bg-light sidebar border-top">
-        <div id="sidenav-styles" class="sidebar-sticky rounded-top">
-                <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-1 mb-1 text-muted">
-                        <span style="font-size: 1.25rem;"> Manage</span>
-                        <a class="d-flex align-items-center text-muted" href    ="#">
-                    
+        <div id="sidenav-styles" class="sidebar-sticky rounded-top accordion">
+                <h3 class="hvr-sweep-to-bottom hvr-icon-hang sidebar-heading d-flex justify-content-between align-items-center px-3 mt-1 mb-1 text-muted">
+                        
+                        <a data-target="#manage-links" data-toggle="collapse" class="mt-4 d-flex align-items-center text-muted p-1" href    ="#">
+                                <span style="font-size: 1.25rem;"> Manage</span>
+                                <i style="color:wheat;" class=" ml-3 fas fa-angle-down fa-2x hvr-icon"></i> 
                         </a>
                     </h3>
-                    <ul id="mainsidebar-report" class="nav flex-column mb-2">
-                        <li class="nav-item">
+                    <ul id="manage-links" class="nav flex-column mb-2 collapse" data-parent="#sidenav-styles">
+                        <li class="hvr-underline-from-center nav-item">
                             <a class="nav-link" href="{{url_for('admin.admin_main')}}">
                                 <span style="font-size: 1rem;" data-feather="file-text">Admin </span>
-
+                                
                             </a>
                         </li>
                     </ul>
 
-                <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span style="font-size: 1.25rem;"> Data Entry</span>
-                        <a class="d-flex align-items-center text-muted" href="#">
-                        </a>
+                <h3 class="hvr-sweep-to-bottom sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                        
+                        <a data-toggle="collapse" data-target="#dataentry-links"  class="d-flex align-items-center text-muted mt-2 p-1" href="#">
+                                <span  style="font-size: 1.25rem;"> Data Entry</span>
+                                <i style="color:wheat;" class=" ml-3 fas fa-angle-down fa-2x"></i> 
+                            </a>
                     </h3>
-                    <ul id="mainsidebar-report" class="nav flex-column mb-2">
-                        <li class="nav-item">
+                    <ul data-parent="#sidenav-styles" id="dataentry-links" class="collapse nav flex-column mb-2">
+                        <li class="hvr-underline-from-center nav-item">
                             <a class="nav-link" href="{{url_for('dataentry.post_format')}}">
                                 <span style="font-size: 1rem;" data-feather="file-text">Visitors</span>
 
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="  nav-item">
                             <a class="nav-link" href="{{url_for('dataentry.post_vehicles')}}">
                                 <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
                                 
@@ -157,20 +166,21 @@
                         </li>
                     </ul>
 
-            <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                <span style="font-size: 1.25rem;"> Reports</span>
-                <a class="d-flex align-items-center text-muted" href="#">
-            
+            <h3 class="hvr-sweep-to-bottom sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                
+                <a data-toggle="collapse" data-target="#report-links" class="d-flex align-items-center text-muted mt-2 p-1" href="#">
+                        <span style="font-size: 1.25rem;"> Reports</span>
+                        <i style="color:wheat;" class=" ml-3 fas fa-angle-down fa-2x"></i> 
                 </a>
             </h3>
-            <ul id="mainsidebar-report" class="nav flex-column mb-2" >
-                <li class="nav-item">
+            <ul data-parent="#sidenav-styles" id="report-links" class=" collapse nav flex-column mb-2" >
+                <li class="hvr-underline-from-center nav-item">
                     <a class="nav-link" href="{{url_for('report.report_main')}}">
                         <span style="font-size: 1rem;" data-feather="file-text">Visitors</span>
 
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class=" nav-item">
                     <a class="nav-link" href="{{url_for('report.report_vehicles')}}">
                         <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
                         
@@ -181,20 +191,21 @@
                     </ul>
                 </li>
             </ul>
-            <h3 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span style="font-size: 1.25rem;"> DashBoard </span>
-                    <a class="d-flex align-items-center text-muted" href="#">
-                
+            <h3 class="hvr-sweep-to-bottom sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    
+                    <a data-target="#dashboard-links" data-toggle="collapse" class="d-flex align-items-center text-muted mt-2 p-1" href="#">
+                            <span style="font-size: 1.25rem;"> DashBoard </span>
+                            <i style="color:wheat;" class=" ml-3 fas fa-angle-down fa-2x"></i> 
                     </a>
                 </h3>
-                <ul id="mainsidebar-report" class="nav flex-column mb-2 ">
-                    <li class="nav-item">
+                <ul data-parent="#sidenav-styles" id="dashboard-links" class="collapse nav flex-column mb-2 ">
+                    <li class="hvr-underline-from-center nav-item">
                         <a class="nav-link" href="{{url_for('report.dashboard')}}">
                             <span style="font-size: 1rem;" data-feather="file-text">Visitors</span>
 
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="hvr-underline-from-center nav-item">
                         <a class="nav-link" href="{{url_for('report.dashboard_vehicle')}}">
                             <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
                             
