--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -100,7 +100,7 @@
 
     <nav style="height: 60px;" class="fixed-top text-dark navbar navbar-dark bg-light flex-md-nowrap border-bottom ">
         <p  style="font-weight: 400;" class="p-3 lead h5">Visitor Management System</p>
-        <form id="navbarSearchForm" class="navbar-form form-row  justify-content-center" role="search" action="{{url_for('search.search_main')}}">
+       <!--  <form id="navbarSearchForm" class="navbar-form form-row  justify-content-center" role="search" action="{{url_for('search.search_main')}}">
             <div class="col-md-5 col-sm-4">
                 <div class="shadow input-group">
                     <div class="input-group-prepend"> 
@@ -113,6 +113,7 @@
                     <input type="submit" class="btn btn-warning " value="Search">
             </div> 
         </form>
+    -->
            
         
         <ul class="navbar-nav">
